--- a/about.qmd
+++ b/about.qmd
@@ -2,4 +2,4 @@
 title: "About"
 ---
 
-Tyto stránky byly vytvořeny ve formátu [Quarto](https://quarto.org/docs/websites) a za použití jazyka R.
+Tyto stránky byly vytvořeny ve formátu [Quarto](https://quarto.org/docs/websites) a za použití jazyka R. Jsou hostovány na platformě Netlify. Zdrojové soubory jsou zveřejněny na [GitHubu](https://github.com/jfronc/jfronc.cz).
