--- a/cv.qmd
+++ b/cv.qmd
@@ -13,6 +13,7 @@ obor: Teoretické právní vědy – Správní právo a správní věda
 
 **JUDr.** – Univerzita Karlova, Právnická fakulta  
 *2021*  
+diplomová práce [uznána jako rigorózní](https://dspace.cuni.cz/handle/20.500.11956/125224)
 
 **Mgr.** – Univerzita Karlova, Právnická fakulta  
 *2015–2020*  
