--- a/projects/difuzni-prezkum.qmd
+++ b/projects/difuzni-prezkum.qmd
@@ -1,14 +1,16 @@
 ---
 title: "Difúzní přezkum právních předpisů"
+format:
+  html:
+    page-layout: full
 ---
 
-Moje disertační práce se věnuje přezkumu právních předpisů se zvláštním zaměřením na aplikaci čl. 95 odst. 1 Ústavy. V této souvislosti jsem shromáždil případy, kdy správní soudy deklarovaly nezákonnost aplikovaného prodzákonného předpisu.
+Moje disertační práce, odevzdaná v říjnu 2025, se věnuje přezkumu právních předpisů se zvláštním zaměřením na aplikaci čl. 95 odst. 1 Ústavy. V této souvislosti jsem shromáždil celkem 62 případů, kdy správní soudy deklarovaly nezákonnost aplikovaného prodzákonného předpisu.
 
 Tabulka případů ke stažení: [.rds](../../data/difuzni-prezkum.rds) 
 
-```{r table, echo = FALSE, message = FALSE}
-xfun::pkg_attach("dplyr", "stringr", "magrittr", "gt")
-knitr::opts_chunk$set(echo = FALSE, message = FALSE)
+```{r table, echo = FALSE, message = FALSE, warning = FALSE}
+xfun::pkg_attach("dplyr", "stringr", "magrittr", "reactable")
 
 df <- readRDS("../data/difuzni-prezkum.rds") 
 df %<>% mutate(Trvalo = Datum - Od,
@@ -18,5 +20,5 @@ df %<>% mutate(Trvalo = Datum - Od,
                  str_detect(Ustanovení, "^\\(") ~ NA,
                  .default = Ustanovení)
               )
-df %>% gt()
+df %>% reactable(searchable = TRUE)
 ```
